# capacity-calculator

./: .gitignore  README.md  pyproject.toml  requirements.txt
application/: admin.py  controllers.py  managers.py  models.py
application/migrations/: 0001_initial.py  0002_alter_faculty_options_faculty_students_count_and_more.py  0003_alter_staff_options_faculty_slug_and_more.py
application/tests/: test_controllers.py
core/: settings.py
scripts/: main.py
