[project]
name = "capacity-calculator"
version = "0.1.0"
description = "web application for calculating capacity of university faculties"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
    "django-cotton>=1.3.0",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-htmx>=1.21.0",
    "django-import-export>=4.3.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[dependency-groups]
dev = [
    "pytest-django>=4.9.0",
    "pytest>=8.3.3",
]
